--- a/GeneralClashConfig_lohome_meta_mac.yaml
+++ b/GeneralClashConfig_lohome_meta_mac.yaml
@@ -35,8 +35,6 @@ tun:
   dns-hijack:
     - any:53
     - tcp://any:53
-    - 198.18.0.2:53
-    - 28.0.0.2:53
   auto-redir: true
   auto-route: true
   auto-detect-interface: true
@@ -55,10 +53,12 @@ dns:
     - 223.5.5.5
     - 119.29.29.29
   nameserver-policy:
-    "services.googleapis.cn": 'https://doh.opendns.com/dns-query'
     "geosite:cn,private": 
       - 119.29.29.29
       - 223.5.5.5
+    "services.googleapis.cn": 'https://doh.opendns.com/dns-query'
+    "+.newlink.com, +.newlinks.com": 119.29.29.29
+    "geosite:category-ads-all": rcode://success
   proxy-server-nameserver:
     - https://doh.pub/dns-query
     - https://dns.alidns.com/dns-query
