--- a/GeneralClashConfig_lohome_meta.yaml
+++ b/GeneralClashConfig_lohome_meta.yaml
@@ -56,7 +56,7 @@ dns:
       - 119.29.29.29
       - 223.5.5.5
     "services.googleapis.cn": 'https://doh.opendns.com/dns-query'
-    "+.newlink.com, +.newlinks.com": 119.29.29.29
+    "+.newlink.com, +.newlinks.com, +.nlktj.cn": 119.29.29.29
     "geosite:category-ads-all": rcode://success
   proxy-server-nameserver:
     - https://doh.pub/dns-query
@@ -75,18 +75,19 @@ dns:
     - "+.newlinks.com"
     - "+.shylwlkj.com"
     - "+.nlsaas.com"
+    - "+.nlktj.cn"
     - "+.czb365.com"
     - "+.tencentcdb.com"
     - "+.dnsapi.cn"
     - "+.10010.com"
-    - "*.lan"
-    - "*.localdomain"
-    - "*.example"
-    - "*.invalid"
-    - "*.localhost"
-    - "*.test"
-    - "*.local"
-    - "*.home.arpa"
+    - "+.lan"
+    - "+.localdomain"
+    - "+.example"
+    - "+.invalid"
+    - "+.localhost"
+    - "+.test"
+    - "+.local"
+    - "+.home.arpa"
     - time.*.com
     - time.*.gov
     - time.*.edu.cn
