--- a/GeneralClashConfig_lohome_meta.yaml
+++ b/GeneralClashConfig_lohome_meta.yaml
@@ -52,11 +52,18 @@ dns:
     - 223.5.5.5
     - 119.29.29.29
   nameserver-policy:
-    "geosite:cn,private": 
-      - 119.29.29.29
+    "geosite:cn,private":
+      - https://doh.pub/dns-query
+      - https://dns.alidns.com/dns-query
+    "geosite:google":
+      - tls://8.8.4.4
+      - tls://8.8.8.8
+    "geosite:geolocation-!cn":
+      - tls://8.8.4.4
+      - https://1.0.0.1/dns-query
+    "+.newlink.com, +.newlinks.com, +.nlktj.cn":
       - 223.5.5.5
-    "services.googleapis.cn": 'https://doh.opendns.com/dns-query'
-    "+.newlink.com, +.newlinks.com, +.nlktj.cn": 119.29.29.29
+      - 119.29.29.29
     "geosite:category-ads-all": rcode://success
   proxy-server-nameserver:
     - https://doh.pub/dns-query
