--- a/GeneralClashConfig_lohome_meta_android.yaml
+++ b/GeneralClashConfig_lohome_meta_android.yaml
@@ -40,6 +40,7 @@ tun:
   auto-redir: true
   auto-route: true
   auto-detect-interface: true
+  strict-route: true
 profile:
   store-selected: true
   store-fake-ip: true
@@ -55,11 +56,18 @@ dns:
     - 223.5.5.5
     - 119.29.29.29
   nameserver-policy:
-    "geosite:cn,private": 
+    "geosite:cn,private":
       - https://doh.pub/dns-query
       - https://dns.alidns.com/dns-query
-    "services.googleapis.cn": 'https://doh.opendns.com/dns-query'
-    "+.newlink.com, +.newlinks.com, +.nlktj.cn": 119.29.29.29
+    "geosite:google":
+      - tls://8.8.4.4
+      - tls://8.8.8.8
+    "geosite:geolocation-!cn":
+      - tls://8.8.4.4
+      - https://1.0.0.1/dns-query
+    "+.newlink.com, +.newlinks.com, +.nlktj.cn":
+      - 223.5.5.5
+      - 119.29.29.29
     "geosite:category-ads-all": rcode://success
   proxy-server-nameserver:
     - https://doh.pub/dns-query
