--- a/GeneralClashConfig_lohome_meta.yaml
+++ b/GeneralClashConfig_lohome_meta.yaml
@@ -45,7 +45,7 @@ dns:
   ipv6: false
   prefer-h3: true
   listen: 0.0.0.0:53
-  enhanced-mode: fake-ip
+  enhanced-mode: fake-ip # fake-ip or redir-host
   fake-ip-range: 28.0.0.1/8
   use-hosts: true
   default-nameserver:
