--- a/GeneralClashConfig_lohome_meta_mac.yaml
+++ b/GeneralClashConfig_lohome_meta_mac.yaml
@@ -43,7 +43,7 @@ tun:
   auto-redirect: false
   auto-route: true
   auto-detect-interface: true
-  strict-route: true
+  strict-route: false
   device: utunMeta
   route-exclude-address-set:
     - cncidr
