--- a/GeneralClashConfig_lohome_meta_android.yaml
+++ b/GeneralClashConfig_lohome_meta_android.yaml
@@ -25,7 +25,7 @@ log-level: debug
 mode: rule
 external-controller: 0.0.0.0:9090
 unified-delay: true
-tcp-concurrent: true
+tcp-concurrent: false
 global-client-fingerprint: chrome
 geodata-loader: memconservative
 geo-auto-update: true
