--- a/GeneralClashConfig_lohome_meta_mac.yaml
+++ b/GeneralClashConfig_lohome_meta_mac.yaml
@@ -23,7 +23,7 @@ mode: rule
 external-controller: 127.0.0.1:9090
 external-ui: Yacd-meta
 unified-delay: true
-tcp-concurrent: true
+tcp-concurrent: false
 global-client-fingerprint: chrome
 geodata-loader: standard
 geo-auto-update: true
