--- a/GeneralClashConfig_lohome_meta_android.yaml
+++ b/GeneralClashConfig_lohome_meta_android.yaml
@@ -10,7 +10,7 @@ port: 7890
 socks-port: 7891
 redir-port: 7892
 mixed-port: 7893
-tproxy-port: 7895
+tproxy-port: 7894
 allow-lan: false
 bind-address: '*'
 skip-auth-prefixes:
@@ -25,7 +25,7 @@ log-level: debug
 mode: rule
 external-controller: 0.0.0.0:9090
 unified-delay: true
-tcp-concurrent: false
+tcp-concurrent: true
 global-client-fingerprint: chrome
 geodata-loader: memconservative
 geo-auto-update: true
