--- a/GeneralClashConfig_lohome_meta_mac.yaml
+++ b/GeneralClashConfig_lohome_meta_mac.yaml
@@ -10,7 +10,7 @@ port: 7890
 socks-port: 7891
 redir-port: 7892
 mixed-port: 7893
-tproxy-port: 7895
+tproxy-port: 7894
 allow-lan: true
 bind-address: '*'
 skip-auth-prefixes:
@@ -23,7 +23,7 @@ mode: rule
 external-controller: 127.0.0.1:9090
 external-ui: Yacd-meta
 unified-delay: true
-tcp-concurrent: false
+tcp-concurrent: true
 global-client-fingerprint: chrome
 geodata-loader: standard
 geo-auto-update: true
