--- a/GeneralClashConfig_lohome_meta_android.yaml
+++ b/GeneralClashConfig_lohome_meta_android.yaml
@@ -25,7 +25,7 @@ log-level: debug
 mode: rule
 external-controller: 0.0.0.0:9090
 unified-delay: true
-tcp-concurrent: false
+tcp-concurrent: true
 global-client-fingerprint: chrome
 geodata-loader: memconservative
 geo-auto-update: true
@@ -61,12 +61,12 @@ dns:
     - 223.5.5.5
     - 119.29.29.29
   nameserver-policy:
-    "geosite:cn,private": [tls://8.8.4.4, https://dns.alidns.com/dns-query, https://doh.pub/dns-query]
-    "geosite:google": [tls://8.8.4.4, https://doh.apad.pro/dns-query, https://1.0.0.1/dns-query]
-    "geosite:geolocation-!cn": [tls://8.8.4.4, https://doh.apad.pro/dns-query, https://1.0.0.1/dns-query]
+    "geosite:cn,private": [https://doh.apad.pro/dns-query,https://dns.alidns.com/dns-query, https://doh.pub/dns-query]
+    "geosite:google": [tls://8.8.4.4, https://1.0.0.1/dns-query]
+    "geosite:geolocation-!cn": [tls://8.8.4.4, https://1.0.0.1/dns-query]
     "geosite:category-ads-all": rcode://success
-  proxy-server-nameserver: [tls://8.8.4.4, https://doh.apad.pro/dns-query, https://1.0.0.1/dns-query]
-  nameserver: [tls://8.8.4.4, https://doh.apad.pro/dns-query, https://1.0.0.1/dns-query, https://dns.alidns.com/dns-query]
+  proxy-server-nameserver: [tls://8.8.4.4, https://1.0.0.1/dns-query]
+  nameserver: [https://doh.apad.pro/dns-query, tls://8.8.4.4, https://1.0.0.1/dns-query]
   fake-ip-filter:
     - "WORKGROUP"
     - "apps.apple.com"
