--- a/GeneralClashConfig_lohome_meta_mac.yaml
+++ b/GeneralClashConfig_lohome_meta_mac.yaml
@@ -23,7 +23,7 @@ mode: rule
 external-controller: 127.0.0.1:9090
 external-ui: Yacd-meta
 unified-delay: true
-tcp-concurrent: false
+tcp-concurrent: true
 global-client-fingerprint: chrome
 geodata-loader: standard
 geo-auto-update: true
@@ -59,12 +59,12 @@ dns:
     - 223.5.5.5
     - 119.29.29.29
   nameserver-policy:
-    "geosite:cn,private": [tls://8.8.4.4, https://dns.alidns.com/dns-query, https://doh.pub/dns-query]
-    "geosite:google": [tls://8.8.4.4, https://doh.apad.pro/dns-query, https://1.0.0.1/dns-query]
-    "geosite:geolocation-!cn": [tls://8.8.4.4, https://doh.apad.pro/dns-query, https://1.0.0.1/dns-query]
+    "geosite:cn,private": [https://doh.apad.pro/dns-query,https://dns.alidns.com/dns-query, https://doh.pub/dns-query]
+    "geosite:google": [tls://8.8.4.4, https://1.0.0.1/dns-query]
+    "geosite:geolocation-!cn": [tls://8.8.4.4, https://1.0.0.1/dns-query]
     "geosite:category-ads-all": rcode://success
-  proxy-server-nameserver: [tls://8.8.4.4, https://doh.apad.pro/dns-query, https://1.0.0.1/dns-query]
-  nameserver: [tls://8.8.4.4, https://doh.apad.pro/dns-query, https://1.0.0.1/dns-query, https://dns.alidns.com/dns-query]
+  proxy-server-nameserver: [tls://8.8.4.4, https://1.0.0.1/dns-query]
+  nameserver: [https://doh.apad.pro/dns-query, tls://8.8.4.4, https://1.0.0.1/dns-query]
   fake-ip-filter:
     - "WORKGROUP"
     - "apps.apple.com"
