--- a/GeneralClashConfig_lohome_meta_android.yaml
+++ b/GeneralClashConfig_lohome_meta_android.yaml
@@ -57,13 +57,12 @@ dns:
   enhanced-mode: fake-ip # fake-ip or redir-host
   fake-ip-range: 28.0.0.1/8
   use-hosts: true
-  default-nameserver:
-    - 223.5.5.5
-    - 119.29.29.29
+  default-nameserver: [223.5.5.5, 119.29.29.29]
   nameserver-policy:
-    "geosite:cn,apple,private,microsoft,onedrive": [https://doh.apad.pro/dns-query,https://dns.alidns.com/dns-query, https://doh.pub/dns-query]
-    "geosite:google": [tls://8.8.4.4, https://1.0.0.1/dns-query]
-    "geosite:geolocation-!cn": [tls://8.8.4.4, https://1.0.0.1/dns-query]
+    "+.lohome.top": [223.5.5.5, 119.29.29.29]
+    "geosite:tracker,private": [223.5.5.5, 119.29.29.29]
+    "geosite:cn,china-lis,category-games@cn,apple,microsoft@cn,onedrive": [https://doh.apad.pro/dns-query, https://dns.alidns.com/dns-query, https://doh.pub/dns-query]
+    "geosite:google,geolocation-!cn": [tls://8.8.4.4, https://1.0.0.1/dns-query]
     "geosite:category-ads-all": rcode://success
   proxy-server-nameserver: [tls://8.8.4.4, https://1.0.0.1/dns-query]
   nameserver: [https://doh.apad.pro/dns-query, tls://8.8.4.4, https://1.0.0.1/dns-query]
