--- a/GeneralClashConfig_lohome_meta_android.yaml
+++ b/GeneralClashConfig_lohome_meta_android.yaml
@@ -61,7 +61,7 @@ dns:
   nameserver-policy:
     "+.lohome.top": [223.5.5.5, 119.29.29.29]
     "geosite:tracker,private": [223.5.5.5, 119.29.29.29]
-    "geosite:cn,china-lis,category-games@cn,apple,microsoft@cn,onedrive": [https://doh.apad.pro/dns-query, https://dns.alidns.com/dns-query, https://doh.pub/dns-query]
+    "geosite:cn,china-lis,category-games@cn,apple,microsoft@cn,onedrive": [https://doh.apad.pro/dns-query, https://223.5.5.5/dns-query, https://1.12.12.12/dns-query]
     "geosite:google,geolocation-!cn": [tls://8.8.4.4, https://1.0.0.1/dns-query]
     "geosite:category-ads-all": rcode://success
   proxy-server-nameserver: [tls://8.8.4.4, https://1.0.0.1/dns-query]
