--- a/GeneralClashConfig_lohome_meta.yaml
+++ b/GeneralClashConfig_lohome_meta.yaml
@@ -59,11 +59,11 @@ dns:
   nameserver-policy:
     "+.lohome.top": [223.5.5.5, 119.29.29.29]
     "geosite:tracker,private": [223.5.5.5, 119.29.29.29]
-    "geosite:cn,china-lis,category-games@cn,apple,microsoft@cn,onedrive": [https://doh.apad.pro/dns-query, https://223.5.5.5/dns-query, https://1.12.12.12/dns-query]
-    "geosite:google,geolocation-!cn": [tls://8.8.4.4, https://1.0.0.1/dns-query]
+    "geosite:cn,china-lis,category-games@cn,apple,microsoft@cn,onedrive": [https://223.5.5.5/dns-query, https://1.12.12.12/dns-query]
+    "geosite:google,geolocation-!cn": [https://8.8.4.4/dns-query, https://9.9.9.11/dns-query]
     "geosite:category-ads-all": rcode://success
-  proxy-server-nameserver: [tls://8.8.4.4, https://1.0.0.1/dns-query]
-  nameserver: [https://doh.apad.pro/dns-query, tls://8.8.4.4, https://1.0.0.1/dns-query]
+  proxy-server-nameserver: [https://8.8.4.4/dns-query, https://9.9.9.11/dns-query]
+  nameserver: [https://8.8.4.4/dns-query, https://9.9.9.11/dns-query]
   fake-ip-filter:
     - "WORKGROUP"
     - "apps.apple.com"
