--- a/GeneralClashConfig_lohome_meta_mac.yaml
+++ b/GeneralClashConfig_lohome_meta_mac.yaml
@@ -52,20 +52,20 @@ dns:
   ipv6: false
   prefer-h3: true
   listen: 0.0.0.0:53
-  enhanced-mode: fake-ip # fake-ip or redir-host
-  fake-ip-range: 28.0.0.1/8
+  enhanced-mode: redir-host # fake-ip or redir-host
+  # fake-ip-range: 28.0.0.1/8
   use-hosts: true
   default-nameserver: [223.5.5.5, 119.29.29.29, 114.114.114.114]
   nameserver-policy:
     "+.lohome.top": [223.5.5.5, 119.29.29.29]
     "geosite:tracker,private": [223.5.5.5, 119.29.29.29]
-    "geosite:cn,china-lis,category-games@cn,apple,microsoft@cn,onedrive": [https://doh.apad.pro/dns-query, https://223.5.5.5/dns-query, https://1.12.12.12/dns-query]
-    "geosite:google,geolocation-!cn": [tls://8.8.4.4, https://1.0.0.1/dns-query]
+    "geosite:cn,china-lis,category-games@cn,apple,microsoft@cn,onedrive": [https://223.5.5.5/dns-query, https://1.12.12.12/dns-query]
+    "geosite:google,geolocation-!cn": [https://8.8.4.4/dns-query, https://9.9.9.11/dns-query]
     "geosite:category-ads-all": rcode://success
-  proxy-server-nameserver: [tls://8.8.4.4, https://1.0.0.1/dns-query]
-  nameserver: [https://doh.apad.pro/dns-query, tls://8.8.4.4, https://1.0.0.1/dns-query]
-  fake-ip-filter:
-    - "+"
+  proxy-server-nameserver: [https://8.8.4.4/dns-query, https://9.9.9.11/dns-query]
+  nameserver: [https://8.8.4.4/dns-query, https://9.9.9.11/dns-query]
+  # fake-ip-filter:
+  #  - "+"
 
 sniffer:
   enable: true
