--- a/GeneralClashConfig_lohome_meta_mac.yaml
+++ b/GeneralClashConfig_lohome_meta_mac.yaml
@@ -16,7 +16,7 @@ bind-address: '*'
 skip-auth-prefixes:
   - 127.0.0.1/8
   - ::1/128
-ipv6: false
+ipv6: true
 find-process-mode: strict
 log-level: debug
 mode: rule
@@ -49,7 +49,7 @@ profile:
 dns:
   enable: true
   use-system-hosts: true
-  ipv6: false
+  ipv6: true
   prefer-h3: true
   listen: 0.0.0.0:53
   enhanced-mode: redir-host # fake-ip or redir-host
