--- a/GeneralClashConfig_lohome_meta.yaml
+++ b/GeneralClashConfig_lohome_meta.yaml
@@ -56,7 +56,7 @@ dns:
     "+.lohome.top,+.syncthing.net,+.zerotier.net":
       - https://223.5.5.5/dns-query#h3=true
       - https://1.12.12.12/dns-query
-    "rule-set:direct,china,china1": 
+    "rule-set:direct,china,chinax,chinatest": 
       - https://223.5.5.5/dns-query#h3=true
       - https://1.12.12.12/dns-query
     "geosite:tracker,private":
@@ -65,7 +65,7 @@ dns:
     "geosite:cn,tld-cn,category-games@cn,apple-cn,apple,microsoft@cn,onedrive": 
       - https://223.5.5.5/dns-query#h3=true
       - https://1.12.12.12/dns-query
-    "rule-set:google,gfw,proxy":
+    "rule-set:google,gfw,proxy,proxyclassical,global":
       - https://dns.google/dns-query#h3=true
       - https://dns12.quad9.net/dns-query
       - https://doh.apad.pro/dns-query
@@ -259,6 +259,13 @@ rule-providers:
     path: ./ruleset/apple.yaml
     interval: 86400
 
+  appleall:
+    type: http
+    behavior: classical
+    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Apple/Apple_Classical_No_Resolve.yaml"
+    path: ./ruleset/appleall.yaml
+    interval: 86400
+
   netflix:
     type: http
     behavior: classical
@@ -364,11 +371,18 @@ rule-providers:
     path: ./ruleset/china.yaml
     interval: 86400
 
-  china1:
+  chinax:
     type: http
     behavior: classical
     url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China_Classical_No_Resolve.yaml"
-    path: ./ruleset/china1.yaml
+    path: ./ruleset/chinax.yaml
+    interval: 86400
+
+  chinatest:
+    type: http
+    behavior: classical
+    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/ChinaTest/ChinaTest_Classical_No_Resolve.yaml"
+    path: ./ruleset/chinatest.yaml
     interval: 86400
 
   direct:
@@ -392,6 +406,20 @@ rule-providers:
     path: ./ruleset/gfw.yaml
     interval: 86400
 
+  global:
+    type: http
+    behavior: classical
+    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Global/Global_Classical_No_Resolve.yaml"
+    path: ./ruleset/global.yaml
+    interval: 86400
+
+  proxyclassical:
+    type: http
+    behavior: classical
+    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Proxy/Proxy_Classical_No_Resolve.yaml"
+    path: ./ruleset/proxyclassical.yaml
+    interval: 86400
+
   telegramcidr:
     type: http
     behavior: ipcidr
@@ -404,6 +432,13 @@ rule-providers:
     behavior: ipcidr
     url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/cncidr.txt"
     path: ./ruleset/cncidr.yaml
+    interval: 86400
+
+  chinaips:
+    type: http
+    behavior: ipcidr
+    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/ChinaIPs/ChinaIPs_IP.yaml"
+    path: ./ruleset/chinaips.yaml
     interval: 86400
 
   lancidr:
