--- a/GeneralClashConfig_lohome_meta_mac.yaml
+++ b/GeneralClashConfig_lohome_meta_mac.yaml
@@ -102,10 +102,10 @@ dns:
   use-hosts: true
   default-nameserver: [223.5.5.5, 119.29.29.29, 114.114.114.114]
   nameserver-policy:
-    "+.lohome.top, +.syncthing.net":
+    "+.lohome.top,+.syncthing.net,+.zerotier.net":
       - https://223.5.5.5/dns-query#h3=true
       - https://1.12.12.12/dns-query
-    "rule-set:direct": 
+    "rule-set:direct,china,chinax,chinatest": 
       - https://223.5.5.5/dns-query#h3=true
       - https://1.12.12.12/dns-query
     "geosite:tracker,private":
@@ -114,7 +114,7 @@ dns:
     "geosite:cn,tld-cn,category-games@cn,apple-cn,apple,microsoft@cn,onedrive": 
       - https://223.5.5.5/dns-query#h3=true
       - https://1.12.12.12/dns-query
-    "rule-set:google,gfw,proxy":
+    "rule-set:google,gfw,proxy,proxyclassical,global":
       - https://dns.google/dns-query#h3=true
       - https://dns12.quad9.net/dns-query
       - https://doh.apad.pro/dns-query
@@ -122,7 +122,6 @@ dns:
       - https://dns.google/dns-query#h3=true
       - https://dns12.quad9.net/dns-query
       - https://doh.apad.pro/dns-query
-    "geosite:category-ads-all": rcode://success
   proxy-server-nameserver: 
       - https://dns.google/dns-query#h3=true
       - https://dns12.quad9.net/dns-query
@@ -180,6 +179,13 @@ rule-providers:
     behavior: domain
     url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/apple.txt"
     path: ./ruleset/apple.yaml
+    interval: 86400
+
+  appleall:
+    type: http
+    behavior: classical
+    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Apple/Apple_Classical_No_Resolve.yaml"
+    path: ./ruleset/appleall.yaml
     interval: 86400
 
   netflix:
@@ -245,18 +251,18 @@ rule-providers:
     path: ./ruleset/microsoft.yaml
     interval: 86400
 
-  twitter:
-    type: http
-    behavior: classical
-    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Twitter/Twitter_No_Resolve.yaml"
-    path: ./ruleset/twitter.yaml
-    interval: 86400
-
   discord:
     type: http
     behavior: classical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Discord/Discord_No_Resolve.yaml"
     path: ./ruleset/discord.yaml
+    interval: 86400
+
+  twitter:
+    type: http
+    behavior: classical
+    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Twitter/Twitter_No_Resolve.yaml"
+    path: ./ruleset/twitter.yaml
     interval: 86400
 
   tiktok:
@@ -287,11 +293,18 @@ rule-providers:
     path: ./ruleset/china.yaml
     interval: 86400
 
-  china1:
+  chinax:
     type: http
     behavior: classical
     url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China_Classical_No_Resolve.yaml"
-    path: ./ruleset/china1.yaml
+    path: ./ruleset/chinax.yaml
+    interval: 86400
+
+  chinatest:
+    type: http
+    behavior: classical
+    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/ChinaTest/ChinaTest_Classical_No_Resolve.yaml"
+    path: ./ruleset/chinatest.yaml
     interval: 86400
 
   direct:
@@ -315,6 +328,20 @@ rule-providers:
     path: ./ruleset/gfw.yaml
     interval: 86400
 
+  global:
+    type: http
+    behavior: classical
+    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Global/Global_Classical_No_Resolve.yaml"
+    path: ./ruleset/global.yaml
+    interval: 86400
+
+  proxyclassical:
+    type: http
+    behavior: classical
+    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Proxy/Proxy_Classical_No_Resolve.yaml"
+    path: ./ruleset/proxyclassical.yaml
+    interval: 86400
+
   telegramcidr:
     type: http
     behavior: ipcidr
@@ -327,6 +354,13 @@ rule-providers:
     behavior: ipcidr
     url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/cncidr.txt"
     path: ./ruleset/cncidr.yaml
+    interval: 86400
+
+  chinaips:
+    type: http
+    behavior: ipcidr
+    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/ChinaIPs/ChinaIPs_IP.yaml"
+    path: ./ruleset/chinaips.yaml
     interval: 86400
 
   lancidr:
